Adaptations for 17